--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -22,6 +22,7 @@
   <script src="https://identity-js.netlify.com/v1/netlify-identity-widget.js"></script>
 </body>
 <script>
+  console.log('yar!');
   if (window.netlifyIdentity) {
     window.netlifyIdentity.on("init", user => {
       if (!user) {
